@@ -62,6 +62,15 @@ Version 7.7 05-Mar-08
     (a) A lone ] character is dis-allowed (Perl treats it as data).
     (b) A back reference to an unmatched subpattern matches an empty string 
         (Perl fails the current match path).
+        
+14. A pattern such as /(?2)[]a()b](abc)/ which had a forward reference to a 
+    non-existent subpattern following a character class starting with ']' and
+    containing () gave an internal compiling error instead of "reference to
+    non-existent subpattern". Fortunately, when the pattern did exist, the
+    compiled code was correct. (When scanning forwards to check for the 
+    existencd of the subpattern, it was treating the data ']' as terminating
+    the class, so got the count wrong. When actually compiling, the reference 
+    was subsequently set up correctly.)
 
 
 Version 7.6 28-Jan-08
